# TemplateOpenGL

./: CMakeLists.txt  README.md  main.cpp
include/: Application.hpp  SDLWindow.hpp  Window.hpp
src/: Application.cpp  SDLWindow.cpp
